# Ceccomp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  Makefile.in  README.md  SECURITY.md  _ceccomp  asmrule  ceccomp  compile_commands.json  configure  heaven  heaven.i64  heaven.id0  heaven.id1  heaven.id2  heaven.nam  heaven.til  result.bpf  result.test  test  test.c
bpf/: misc_alu.bpf
completion-zsh/: _ceccomp
completions/: _ceccomp
docs/: Makefile  boot-slate.css  ceccomp-cn.adoc  ceccomp.adoc  ceccomp.zh_CN.adoc  po4a.cfg
include/: Main.h  arch_trans.h  asm.h  check_prog.h  checkfilter.h  color.h  config.h.in  debug_method.h  decode_filters.h  decoder.h  disasm.h  dump.h  emu.h  error.h  formatter.h  hash.h  help.h  i18n.h  main.h  parse_args.h  parseargs.h  parsefilter.h  parseobj.h  parser.h  preasm.h  print_statement.h  printer.h  probe.h  procstatus.h  read_source.h  readsource.h  render.h  resolver.h  reverse_endian.h  scanner.h  str_pile.h  token.h  trace.h  transfer.h  vector.h
po/: Makefile  ceccomp.pot  zh_CN.po
py-temp/: pyproject.toml
scripts/: check-version.hook  check.sh  complete-url.py  compress-images.sh  find-unused-macros.sh  pypi-aarch64.sh  pypi-armhf.sh  pypi-i386.sh  pypi-riscv64.sh  pypi-x86_64.sh  release-changelog.py  update-bpf.sh  update-text.sh  upload-pypi.sh
src/: Asm.c  Disasm.c  Dump.c  Emu.c  Main.c  asm.c  ceccomp.c  disasm.c  dump.c  emu.c  filter.c  main.c  parsefilter.cpp  parseobj.c  preasm.c  probe.c  seccomp_test.c  test.c  tools_test.c  trace.c  transfer.c
test/: checkfilter.c  conftest.py  shared_vars.py  (+11 more)
(+154 files in other folders)
